--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev --respawn --exit-child src/server.ts"
   },
   "keywords": [],
   "author": "Giovani Fernandes <gifernandes105@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "prisma": "^4.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@prisma/client": "^4.0.0",
-    "express": "^4.18.1"
+    "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.3",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
